[package]
name = "icnana"
version = "1.0.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "icnana_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies", "rustls-tls"] }
scraper = "0.12"
url = "2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
urlencoding = "2.1"
tauri-plugin-opener = "2.5.4"
rquest = "5.1.0"
